# rush-booking-csr

./: Cargo.toml  Makefile  README.md  index.html  package-lock.json
src/: api.rs  domain.rs  lib.rs  main.rs
src/components/: layout.rs  layout_with_auth.rs  mod.rs  navbar.rs  sidebar.rs
src/pages/: home.rs  login.rs  logout.rs  mod.rs
src/pages/admin/: dashboard.rs  mod.rs  rooms.rs  users.rs
